# vlc-yo

./: Makefile.am  configure.ac  create_bmp.py  create_ico.py  grep_input.txt  grep_instance.txt  grep_int_t.txt  grep_output.txt
.github/workflows/: build-windows.yml  main.yml
contrib/src/aribb24/: libm.patch
contrib/src/aribb25/: 0001-fix-build-script.patch  0002-fix-libs-include.patch
contrib/src/asdcplib/: 0001-Remove-a-broken-unused-template-class.patch  adding-pkg-config-file.patch  port-to-nettle.patch
contrib/src/bluray/: 0001-Link-with-gdi32-when-using-freetype-in-Windows.patch  0002-Fix-java-version-detection-for-JDK-11.patch
contrib/src/breakpad/: 0001-mac-client-Upgrade-Breakpad.xib-to-new-format.patch  windows-arm64.patch
contrib/src/caca/: 0001-win32-don-t-for-_WIN32_WINNT-to-Win2K.patch  0002-win32-don-t-redefine-GetCurrentConsoleFont-with-ming.patch  0003-win32-use-ANSI-calls-explicitly.patch  0004-win32-use-CreateFile2-when-compiling-for-Win8.patch  0005-canvas-use-GetCurrentProcessId-on-Windows.patch  0006-stubs-include-winsock2.h-to-get-htons-htonl-declarat.patch  caca-fix-compilation-llvmgcc.patch  caca-fix-pkgconfig.patch
contrib/src/chromaprint/: 0001-Fix-support-for-FFMpeg-4.2-to-5.0.patch  0001-add-the-C-runtime-to-the-packages-to-link-to.patch  0002-add-required-FFmpeg-libraries-to-the-generated-pkg-c.patch  0003-chromaprint-add-ability-to-link-with-VDSP-Accelerate.patch
contrib/src/dvbcsa/: 0001-generate-pkgconfig.patch
contrib/src/dvbpsi/: 0001-dvbpsi_packet_push-compute-sizes-using-pointer-to-en.patch  0001-really-identify-duplicates.patch  0002-dvbpsi_packet_push-check-adaptation-field-length.patch  0002-really-reset-packet-counter.patch  0003-dvbpsi_packet_push-check-section-pointers-field.patch  0004-dvbpsi_packet_push-check-section-length.patch
contrib/src/dvdnav/: 0001-configure-don-t-use-ms-style-packing.patch
contrib/src/ebml/: 0001-EbmlMaster-fix-leak-when-reading-upper-level-element.patch  0001-EbmlString-ReadFully-use-automatic-memory-management.patch  0002-EbmlUnicodeString-use-std-string-when-reading-instea.patch
contrib/src/faad2/: faad2-disable-drc.patch  faad2-fixed.patch
contrib/src/ffmpeg/: 0001-avcodec-dxva2_hevc-add-support-for-parsing-HEVC-Rang.patch  0001-avcodec-mpeg12dec-don-t-call-hw-end_frame-when-start.patch  0001-fix-mf_utils-compilation-with-mingw64.patch  dxva_vc1_crash.patch  (+6 more)
doc/: Makefile.am
doc/libvlc/: CMakeLists.txt  appkit_player.m  d3d11_player.cpp  d3d9_player.c  example.c  gtk_player.c  sdl_opengl_player.cpp  thumbnailer.c  win_player.c  wx_player.cpp
doc/libvlc/QtGL/: qtvlcwidget.cpp  qtvlcwidget.h
doc/libvlc/QtPlayer/: player.cpp  player.h
extras/tools/: packages.mak  tools.mak
include/: meson.build  vlc_actions.h  vlc_common.h  vlc_configuration.h  vlc_dialog.h  vlc_interface.h  vlc_keystore.h  vlc_media_library.h  vlc_media_source.h  vlc_objects.h  vlc_vlm.h
include/apoi/: apoi.h  libapoi.h  libapoi_dialog.h  libapoi_events.h  libapoi_media.h  libapoi_media_discoverer.h  libapoi_media_list.h  libapoi_media_list_player.h  libapoi_media_player.h  libapoi_media_track.h  libapoi_picture.h  libapoi_renderer_discoverer.h  libapoi_version.h  libapoi_video.h
lib/: Makefile.am  audio.c  core.c  dialog.c  error.c  event.c  libapoi.pc.in  libapoi.sym  libapoi_internal.h  libapoi_win32_rc.rc.in  log.c  media.c  media_discoverer.c  media_internal.h  media_list.c  media_list_internal.h  media_list_path.h  media_list_player.c  media_player.c  media_player_internal.h  media_track.c  meson.build  picture.c  picture_internal.h  renderer_discoverer.c  renderer_discoverer_internal.h  video.c
modules/: module.rc.in
modules/access/: Makefile.am  imem-access.c
modules/access_output/: Makefile.am
modules/audio_output/: Makefile.am
modules/codec/: Makefile.am  opus_header.c  vorbis.c
modules/control/: Makefile.am  hotkeys.c  intromsg.h  netsync.c  ntservice.c
modules/demux/: Makefile.am
modules/gui/: ncurses.c
modules/misc/: Makefile.am
modules/notify/: notify.c
modules/services_discovery/: Makefile.am
modules/stream_out/: Makefile.am
modules/video_chroma/: Makefile.am  d3d11_fmt.cpp  d3d9_fmt.c
modules/video_filter/: Makefile.am
modules/video_output/: Makefile.am  vgl.c  wextern.c
src/: Makefile.am  apoi-plugin.pc.in  libapoi-module.c  libapoi.c  libapoi.h  libapoicore.sym  libapoicore_win32_rc.rc.in  missing.c
src/android/: specific.c  thread.c
src/audio_output/: dec.c  filters.c  output.c  volume.c
src/config/: chain.c  cmdline.c  configuration.h  core.c  file.c  help.c
src/darwin/: dirs.m  specific.c
src/input/: decoder.c  decoder_device.c  decoder_helpers.c  demux.c  input_interface.h  resource.c  services_discovery.c  stream.c  stream_extractor.c  stream_filter.c  vlm.c
src/interface/: dialog.c  interface.c
src/linux/: dirs.c
src/media_source/: media_source.c  media_tree.c
src/misc/: actions.c  addons.c  cpu.c  executor.c  exit.c  fifo.c  filter.c  filter_chain.c  fingerprinter.c  image.c  interrupt.c  keystore.c  medialibrary.c  messages.c  objects.c  objects_cxx_test.cpp  objres.c  probe.c  renderer_discovery.c  threads.c  tracer.c  update.c  update.h  variables.c  xml.c
src/modules/: bank.c  cache.c  entry.c  modules.c  modules.h
src/network/: http_auth.c  httpd.c  tls.c
src/os2/: dirs.c  filesystem.c  specific.c  thread.c
src/player/: player.c
src/playlist/: export.c  playlist.h
src/posix/: dirs.c  specific.c  thread.c
src/preparser/: fetcher.c
src/stream_output/: sap.c
src/test/: headers.c
src/text/: charset.c  strings.c  unicode.c
src/video_output/: display.c  inhibit.c  opengl.c  video_output.c  vout_subpictures.c  window.c
src/win32/: dirs.c  filesystem.c  specific.c  thread.c
test/: Makefile.am  iosvlc.m  vlc-demux-libfuzzer.c  vlc-window.c  watchosvlc.m
test/libvlc/: core.c  equalizer.c  media.c  media_callback.c  media_discoverer.c  media_list.c  media_list_player.c  media_player.c  media_player_record.c  media_thumbnail.c  media_utils.h  meta.c  renderer_discoverer.c  slaves.c  test.h  video_callback.c
(+256 files in other folders)
